# project-rag-kaiser

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py
app/api/v1/: router.py  schemas.py
app/core/: config.py  logging_config.py
app/ingestion/: chroma_client.py  chunker.py  doc_loader.py  docling_processor.py  embedder.py  metadata_chunker.py  pipeline.py  pipeline_new.py  preprocess.py
app/schemas/: ingestion.py
rag/: generator.py  query_pipeline.py  retriever.py
scripts/: run_ingestion.py  test_rag.py
